# platform.core.appfw.badge

./: .gitignore  CMakeLists.txt  badge-service.pc.in  badge.manifest  badge.pc.in  badge.sql  project.config
TC/: _export_target_env.sh  config
TC/testcase/: Makefile  tslist  utc_badge.c  utc_badge_setting.c
debian/: changelog  control  libbadge.postinst.in  rules
doc/: badge_doc.h  doxygen.conf
include/: badge.h  badge_db.h  badge_error.h  badge_internal.h  badge_ipc.h  badge_log.h  badge_setting.h  badge_setting_service.h
packaging/: badge.changes  badge.spec  init_db.sh  libbadge.changes  libbadge.spec
src/: badge.c  badge_db.c  badge_error.c  badge_internal.c  badge_ipc.c  badge_setting.c
